ISSUE-441, add text wrapping helper class

--- a/app/styles/shared/utilities/_utilities.text-alignment.scss
+++ b/app/styles/shared/utilities/_utilities.text-alignment.scss
@@ -34,3 +34,7 @@
 /* ==================================== */
 
 .u-text-weight-thin { font-weight: 300; }
+
+// Text Wrapping
+/* ==================================== */
+.u-text-break-word { word-wrap: break-word; }
